trying to fix again on mobile. Maybe a css iss

--- a/innovation/style.css
+++ b/innovation/style.css
@@ -159,7 +159,7 @@ body {
         font-size: 120%;
     }
 
-    .system-health {
+    .box-center {
         font-size: 120%
     }
 
